ui/css/navbar.css
.navbar
{
	display: flex;

	width: 100%;
	height: 15%;

	flex-direction: row;
	flex-wrap: nowrap;

	border-bottom: 2px solid rgba(245, 245, 245, 0.4);
}

.navbar .item
{
	display: flex;

	width: 10%;
	
	color: rgb(245, 245, 245);
	font-family: Arial, Helvetica, sans-serif;
	font-size: medium;

	transition: all 0.2s ease;

	align-items: center;
	justify-content: center;
}

.navbar .item:hover
{
	background-color: rgba(240, 240, 240, 0.4);
	
	color: rgba(0, 0, 0, 0.729411764706);
}

.navbar .item.selected
{
	background-color: rgba(240, 240, 240, 0.4);
	color: black;
}

.navbar .item.selected.active
{
	background-color: rgba(240, 240, 240, 0.4);
	color: black;
}

@media only screen and (min-width: 768px)
{
	.navbar
	{
		height: 22%;
	}

	.navbar .item
	{
		font-size: 0.9rem;
	}
}

@media screen and (min-width: 1200px)
{
	.navbar
	{
		height: 18%;
	}

	.navbar .item
	{
		font-size: 1.09rem;
	}
}

@media screen and (min-width: 1921px)
{
	.navbar
	{
		height: 16%;
	}

	.navbar .item
	{
		font-size: 1.4rem;
	}
}

@media screen and (min-width: 2561px)
{
	.navbar
	{
		height: 15%;
	}

	.navbar .item
	{
		font-size: 2.4rem;
	}
}

